--- a/history.txt
+++ b/history.txt
@@ -13,5 +13,8 @@ python manage.py runserver
 pip install psycopg2-binary
 # Change settings
 pip install python-dotenv
+# Make change to DB schema
 python manage.py makemigrations
 python manage.py migrate
+
+python manage.py createsuperuser
